Added 'Interesting Today' to categories

--- a/plugin.image.flickrxbmc/resources/language/English/strings.xml
+++ b/plugin.image.flickrxbmc/resources/language/English/strings.xml
@@ -28,6 +28,7 @@
     <string id="30307">Places</string>
     <string id="30308">Search Photostream</string>
     <string id="30309">Search flickr</string>
+    <string id="30310">Interesting Today</string>
     
     <!-- General Strings -->
     <string id="30500">Show All In</string>
