--- a/plugin.image.flickr/changelog.txt
+++ b/plugin.image.flickr/changelog.txt
@@ -1,6 +1,12 @@
 flickrXBMC Changelog
 
-Current Version : 0.9.1
+Current Version : 0.9.3
+
+** 0.9.3 ***
+
+Added strings to language files
+Add more (probably bad) spanish translations
+Fixed issue with map thumbnail cache
 
 ** 0.9.2 ***
 
