--- a/plugin.image.flickr/resources/language/English/strings.xml
+++ b/plugin.image.flickr/resources/language/English/strings.xml
@@ -32,4 +32,18 @@
     
     <!-- General Strings -->
     <string id="30500">Show All In</string>
+    <string id="30501">Enter search tags</string>
+    <string id="30502">HTTP Timeout</string>
+    <string id="30503">Connection Timeout</string>
+    <string id="30504">Try again</string>
+    <string id="30505">Authorize flickrXBMC</string>
+    <string id="30506">Go to</string>
+    <string id="30507">follow the instructions, then click OK</string>
+    <string id="30508">Enter the email address here:</string>
+    <string id="30509">Enter the code:</string>
+    <string id="30510">Show Map</string>
+    <string id="30511">Previous</string>
+    <string id="30512">Next</string>
+    <string id="30513">Last</string>
+    <string id="30514">photos</string>
 </strings>
