--- a/plugin.image.flickr/resources/language/English/strings.xml
+++ b/plugin.image.flickr/resources/language/English/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<!-- NOTE The string @REPLACE@ must not be modified in a translation -->
+<!-- NOTE The strings @REPLACE@ and @NAMEREPLACE@ must not be modified in a translation -->
 <strings>
     <string id="30001">Flickr User Name</string>
     <string id="30002">Default Thumb Size</string>
@@ -46,4 +46,8 @@
     <string id="30511">Previous @REPLACE@ photos</string><!--example: Previous 50 photos -->
     <string id="30512">Next @REPLACE@ photos</string><!--example: Next 50 photos -->
     <string id="30513">Last @REPLACE@ photos</string><!--example: Last 50 photos -->
+    <string id="30514">@NAMEREPLACE@'s @REPLACE@</string><!--(Singular possesive) example: John's Photostream -->
+    <string id="30515">@NAMEREPLACE@'s @REPLACE@</string><!--(Plural posessive) example: John's Sets -->
+    <string id="30516">Search @NAMEREPLACE@'s Photostream</string><!--Search John's Photostream -->
+    
 </strings>
