--- a/plugin.image.flickr/resources/language/German/strings.xml
+++ b/plugin.image.flickr/resources/language/German/strings.xml
@@ -46,4 +46,7 @@
     <string id="30511">Previous @REPLACE@ photos</string>
     <string id="30512">Next @REPLACE@ photos</string>
     <string id="30513">Last @REPLACE@ photos</string>
+    <string id="30514">@NAMEREPLACE@'s @REPLACE@</string><!--(Singular possesive) example: John's Photostream -->
+    <string id="30515">@NAMEREPLACE@'s @REPLACE@</string><!--(Plural posessive) example: John's Sets -->
+    <string id="30516">Suche @NAMEREPLACE@'s Fotostream</string><!--Search John's Photostream -->
 </strings>
