--- a/plugin.image.flickr/resources/language/Spanish/strings.xml
+++ b/plugin.image.flickr/resources/language/Spanish/strings.xml
@@ -24,8 +24,11 @@
     <string id="30106">Original</string>
     
     <!-- Settings Categories-->
-    <string id="30200">Mostrar</string>
+    <string id="30200">Main</string>
     <string id="30201">Maps</string>
+    
+    <string id="30253">Images</string>
+    <string id="30254">Format</string>
     
     <!-- 'Your' Categories-->
     <string id="30300">Galería</string>
