--- a/plugin.image.flickr/resources/language/Spanish/strings.xml
+++ b/plugin.image.flickr/resources/language/Spanish/strings.xml
@@ -49,11 +49,9 @@
     <string id="30502">Tiempo de espera de HTTP</string>
     <string id="30503">Tiempo de espera de conexión</string>
     <string id="30504">Inténtalo de nuevo</string>
-    <string id="30505">Autorizar flickrXBMC</string>
-    <string id="30506">Ir a la @REPLACE@</string>
-    <string id="30507">siga las instrucciones, y luego haga clic en Aceptar</string>
-    <string id="30508">Introduzca la dirección de correo electrónico:</string>
-    <string id="30509">Introduzca el código:</string>
+    <string id="30505">Authorization Complete</string><!--TODO: Needs translation -->
+    <string id="30506">Authorization Complete!</string><!--TODO: Needs translation -->
+    
     <string id="30510">Ver Mapa</string>
     <string id="30511">Anterior @REPLACE@ fotos</string>
     <string id="30512">Siguiente @REPLACE@ fotos</string>
