--- a/plugin.image.flickr/resources/language/German/strings.xml
+++ b/plugin.image.flickr/resources/language/German/strings.xml
@@ -49,11 +49,9 @@
     <string id="30502">HTTP Timeout</string>
     <string id="30503">Connection Timeout</string>
     <string id="30504">Try again</string>
-    <string id="30505">Authorize flickrXBMC</string>
-    <string id="30506">Go to @REPLACE@</string>
-    <string id="30507">follow the instructions, then click OK</string>
-    <string id="30508">Enter the email address here:</string>
-    <string id="30509">Enter the code:</string>
+    <string id="30505">Authorization Complete</string>
+    <string id="30506">Authorization Complete!</string>
+    
     <string id="30510">Show Map</string>
     <string id="30511">Previous @REPLACE@ photos</string>
     <string id="30512">Next @REPLACE@ photos</string>
