--- a/plugin.image.flickr/changelog.txt
+++ b/plugin.image.flickr/changelog.txt
@@ -1,7 +1,10 @@
 flickrXBMC Changelog
 
-Current Version : 0.9.96
+Current Version : 0.9.97
 
+** 0.9.97 ***
+
+Fixed bug where initial authorization via external web browser fails, but succeeds on second attempt.
 
 ** 0.9.96 ***
 
