Added 'Search flickr Groups'

--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -45,6 +45,7 @@
     <string id="30309">Search flickr</string>
     <string id="30310">Interesting Today</string>
     <string id="30311">Groups</string>
+    <string id="30312">Search flickr Groups</string>
     
     <!-- Save Photo -->
     <string id="30400">Save Path</string>
