--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,10 @@
 flickrXBMC Changelog
 
-Current Version : 0.9.103
+Current Version : 0.9.104
+
+** 0.9.104 ***
+
+Added 'Search flickr Groups'
 
 ** 0.9.103 ***
 
