Fix some authentication issues and remove WebViewer option (now has unreadable captchas) Update addon.xml for Gotham

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,11 @@
 flickrXBMC Changelog
 
-Current Version : 0.9.104
+Current Version : 1.0.0
+
+** 1.0.0 ***
+
+Fix some authentication issues and remove WebViewer option (now has unreadable captchas)
+Update addon.xml for Gotham
 
 ** 0.9.104 ***
 
