--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,10 @@
 flickrXBMC Changelog
 
-Current Version : 1.0.0
+Current Version : 1.0.1
+
+** 1.0.1 ***
+
+Added settings option for video quality
 
 ** 1.0.0 ***
 
