--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,10 @@
 flickrXBMC Changelog
 
-Current Version : 1.0.5
+Current Version : 1.0.6
+
+*** 1.0.6 ***
+
+Fix for next page item not displaying in some situations
 
 *** 1.0.5 ***
 
